--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <header class="grid" role="banner" id="top">
         <div>
             <h2 class="title">Gaver</h2>
-        </div>        
+        </div> 
+           <div>
+            <a class=" hidden1 island-1-2 signin" href="#">Sign In</a>
+        </div>
         <nav class="nav unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-2-3" role="navigation" id="nav">
             <ul class="nav">
                 <li><a class="island-half nav-current" href="index.html"><strong>How it Works</strong></a></li>
@@ -24,7 +27,7 @@
             </ul>
         </nav>
         <div>
-            <a class="island-1-2 signin" href="#">Sign In</a>
+            <a class=" hidden2 island-1-2 signin" href="#">Sign In</a>
         </div>
     </header>
     
@@ -87,20 +90,38 @@
             <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/gift.jpeg">
             </div>
-            <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
-                <img src="./images/gift.jpeg">
+            <div class="popular hidden3  unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
+                <img src="./images/red.jpg">
             </div>
             <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/gift.jpeg">
             </div>
-            <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
-                <img src="./images/gift.jpeg">
+            <div class="popular hidden3  unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
+                <img src="./images/red.jpg">
             </div>
             <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/gift.jpeg">
             </div>
+            <div class="popular hidden3  unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
+                <img src="./images/red.jpg">
+            </div>
             <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/gift.jpeg">
+            </div>
+            <div class="popular hidden3  unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
+                <img src="./images/red.jpg">
+            </div>
+            <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
+                <img src="./images/gift.jpeg">
+            </div>
+            <div class="popular hidden3 unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
+                <img src="./images/red.jpg">
+            </div>
+            <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
+                <img src="./images/gift.jpeg">
+            </div>
+        <div class="popular hidden3 unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
+                <img src="./images/red.jpg">
             </div>
         </div>
     </main>
@@ -109,13 +130,12 @@
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3">
             <p class="copyright push-0">© 2014 Marisa Bivi· <a href="#top">Top</a></p>
         </div>
-        <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-2-3">    
+        <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">    
             <nav>            
                 <ul class="nav nav-footer milli">
-                    <li><a class="nav-current" href="index.html">How it Works</a></li>
-                    <li><a class="island-1-2" href="Why.html">Why Gaver?</a></li>
-                    <li><a class="island-1-2" href="plans.html">Plans</a></li>
-                    <li><a class="island-1-2" href="signin.html">Sign In</a>
+                    <li><a class="nav-current" href="#">How it Works</a></li>
+                    <li><a class="island-1-2" href="#">Why Gaver?</a></li>
+                    <li><a class="island-1-2" href="#">Plans</a></li>
                 </ul>
             </nav>
         </div>
