--- a/index.html
+++ b/index.html
@@ -87,40 +87,40 @@
     
         <h3 class="align-center">Popular Gifts</h3>
         <div class="grid section">
-            <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
+            <div class="unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/gift.jpeg">
             </div>
-            <div class="popular hidden3  unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
+            <div class="hidden3 unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/red.jpg">
             </div>
             <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/gift.jpeg">
             </div>
-            <div class="popular hidden3  unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
+            <div class="hidden3  unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/red.jpg">
             </div>
             <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/gift.jpeg">
             </div>
-            <div class="popular hidden3  unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
+            <div class="hidden3 unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/red.jpg">
             </div>
             <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/gift.jpeg">
             </div>
-            <div class="popular hidden3  unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
+            <div class="hidden3 unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/red.jpg">
             </div>
             <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/gift.jpeg">
             </div>
-            <div class="popular hidden3 unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
+            <div class="hidden3 unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/red.jpg">
             </div>
             <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/gift.jpeg">
             </div>
-        <div class="popular hidden3 unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
+        <div class="hidden3 unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/red.jpg">
             </div>
         </div>
