open strong tag

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
             <ul class="nav">
                 <li><a class="island-half nav-current" href="index.html"><strong>How it Works</strong></a></li>
                 <li><a class="island-half" href="#"><strong>Why Gaver</strong></a></li>
-                <li><a class="island-half" href="#"><strong>Plans</a></li>
-                    <br>
+                <li><a class="island-half" href="#"><strong>Plans</strong></a></li>
             </ul>
         </nav>
         <div>
