--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-3">
                 <figure>
                     <figcaption class="gutter-half">Often in our travels and seaches we come across that PERFECT gift but it is too soon so we put it aside with the thought of <em>'I'll just have to remember and come back for it later.'</em></figcaption>
-                    <img src="images/shopping-bags.jpg">
+                    <img src="images/shopping-bags.jpg" alt="Men walking with shopping bags.">
                 </figure>
             </div>
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-3">
                 <figure>
                     <figcaption class="gutter-half">But come time we've often totally forgotten where that perfect gift was or what it was all together.  We find oursleves cursing  ourselves out for not picking it up right as we found it.</figcaption>
-                    <img src="images/forgot-something.jpg">
+                    <img src="images/forgot-something.jpg" alt="Man whose forgotten something">
                 </figure>
             </div>
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-3">
                 <figure>
                     <figcaption class="gutter-half push-2">Or worse... you've shown up empty handed because you just out right forgot.</figcaption>
-                    <img class="pad-t-2" src="images/empty.png">
+                    <img class="pad-t-2" src="images/empty.png" alt="man with empty hands">
                 </figure>
             </div>
         </div>
@@ -66,17 +66,17 @@
          <h3 class="align-center">What we offer</h3>
          <div class="grid section">
             <div class="unit unit-xs-1 unit-s-1-3 unit-m-1-3">
-                    <img src="./images/icons1-01.svg">
+                    <img src="./images/icons1-01.svg" alt="list for a friend">
                     <h4 class="align-center">Gift lists for them</h4>
                     <p class="gutter-half">Keep track of who and what gifts you've thought of for people. You can even add them in to groups!</p>
             </div>
             <div class="unit unit-xs-1 unit-s-1-3 unit-m-1-3">
-                <img src="./images/icons1-02.svg">
+                <img src="./images/icons1-02.svg" alt="list titled you">
                 <h4 class="align-center">Gift list for you</h4>
                 <p class="gutter-half">Other can look off this list for gifts to get you. Of course you'll be able to see others lists as well.</p>
             </div>
             <div class="unit unit-xs-1 unit-s-1-3 unit-m-1-3">     
-                <img src="./images/icons1-03.svg">
+                <img src="./images/icons1-03.svg" alt="finger with red string tied to it">
                 <h4 class="align-center">Reminders</h4>
                 <p class="gutter-half">Never forget a celebration again with the reminders we'll send. Now how would you like them? Text? Email? Just in site? Snail Mail?(Not Recommeded)</p>
             </div>
@@ -87,40 +87,40 @@
         <h3 class="align-center">Popular Gifts</h3>
         <div class="grid section">
             <div class="unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
-                <img src="./images/gift.jpeg">
+                <img src="./images/gift.jpeg" alt="red">
             </div>
             <div class="hidden3 unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
-                <img src="./images/red.jpg">
+                <img src="./images/red.jpg" alt="red square">
             </div>
             <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
-                <img src="./images/gift.jpeg">
+                <img src="./images/gift.jpeg" alt="">
             </div>
             <div class="hidden3  unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
-                <img src="./images/red.jpg">
+                <img src="./images/red.jpg" alt="red square">
             </div>
             <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
-                <img src="./images/gift.jpeg">
+                <img src="./images/gift.jpeg" alt="">
             </div>
             <div class="hidden3 unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
-                <img src="./images/red.jpg">
+                <img src="./images/red.jpg" alt="red square">
             </div>
             <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
-                <img src="./images/gift.jpeg">
+                <img src="./images/gift.jpeg" alt="">
             </div>
             <div class="hidden3 unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
-                <img src="./images/red.jpg">
+                <img src="./images/red.jpg" alt="red square">
             </div>
             <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
-                <img src="./images/gift.jpeg">
+                <img src="./images/gift.jpeg" alt="">
             </div>
             <div class="hidden3 unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
-                <img src="./images/red.jpg">
+                <img src="./images/red.jpg" alt="red square">
             </div>
             <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
-                <img src="./images/gift.jpeg">
+                <img src="./images/gift.jpeg" alt="">
             </div>
         <div class="hidden3 unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
-                <img src="./images/red.jpg">
+                <img src="./images/red.jpg" alt="red square">
             </div>
         </div>
     </main>
