website map fix

--- a/form.html
+++ b/form.html
@@ -26,51 +26,59 @@
     </header>
     
     <main>
+    <form action="thanks.html" method="post">
         <div class="section-mid mid island">
             <h2 class="align-center">Join Gaver</h2>
-            <p class="align-center">Please fill in the information below to start your memebership.</em></p>
-
-    <form action="" method="post">
-      <div class="push-1-2">
-        <label for="name">First Name</label>
-        <input id="name">
-      </div>
-      <div class="push-1-2">
-        <label for="name">Last Name</label>
-        <input id="name">
-      </div>
-      <div class="push-1-2">
-        <label for="email">E-mail</label>
-        <input type="email" id="email">
-      </div>
-      <div class="push-1-2">
-        <label for="age">Year of birth</label>
-        <input type="number" id="age" min="1930" max="1997">
-      </div>
-      <fieldset class="push-1-2">
-        <legend>Method of payment</legend>
-        <span class="radio">
-          <input type="radio" id="visa" name="payment">
-          <label for="visa">Visa</label>
-        </span>
-        <span class="radio">
-          <input type="radio" id="credit" name="payment">
-          <label for="credit">Credit Card.</label>
-        </span>
-        <span class="radio">
-          <input type="radio" id="paypal" name="payment">
-          <label for="paypal">Paypal</label>
-        </span>
-      </fieldset>
-      <div class="push">
-        <label for="why">Enter some of your interests here:</label>
-        <textarea id="why"></textarea>
-      </div>
-      <div class="align-center">
-        <button class="tera" type="submit">Sign Up</button>
-      </div>
+            <p class="align-center">Please fill in your information below to start your memebership.</p>
+            <div class="push-1-2">
+                <label for="name">First Name</label>
+                <input id="name">
+            </div>
+            <div class="push-1-2">
+                <label for="name">Last Name</label>
+                <input id="name">
+            </div>
+            <div class="push-1-2">
+                <label for="email">E-mail</label>
+                <input type="email" id="email">
+            </div>
+            <div class="push-1-2">
+                <label for="password">Password</label>
+                <input type="password" id="password">
+            </div>
+            <div class="push-1-2">
+                <label for="password">Confirm Password</label>
+                <input type="password" id="password">
+            </div>
+            <div class="push-1-2">
+                <label for="age">Year of birth</label>
+                <input type="number" id="age" min="1930" max="1997">
+            </div>
+            <fieldset class="push-1-2">
+                <legend>Method of payment</legend>
+                <span class="radio">
+                <input type="radio" id="visa" name="payment">
+                <label for="visa">Visa</label>
+                </span>
+                <span class="radio">
+                <input type="radio" id="credit" name="payment">
+                <label for="credit">Credit Card.</label>
+                </span>
+                <span class="radio">
+                <input type="radio" id="paypal" name="payment">
+                <label for="paypal">Paypal</label>
+                </span>
+            </fieldset>
+            <div class="push">
+                <label for="why">Enter some of your interests here:</label>
+                <textarea id="why"></textarea>
+            </div>
+            <div>
+            <button type="submit">Send!</button>
+            </div>
+        </div>
     </form>
-  </div>
+  
 
     </main>
         
