--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">    
                 <nav>            
                     <ul class="nav-footer milli">
-                        <li><a class="nav-current" href="#">How it Works</a></li>
+                        <li><a class="island-1-2" href="#">How it Works</a></li>
                         <li><a class="island-1-2" href="#">Why Gaver?</a></li>
                         <li><a class="island-1-2" href="#">Plans</a></li>
                     </ul>
