--- a/plans.html
+++ b/plans.html
@@ -39,7 +39,7 @@
                     <img src="images/tree-02.png" class="social">
                     <ul>
                         <li>Create 5 groups</li>
-                        <li>Start secret santas/white elephants</li>
+                        <li>Start Secret Santas/White Elephants</li>
                         <li>Recieve gift suggestions</li>
                         <li>Save 20 gifts per person</li>
                         <li>Personal list for you</li>
@@ -55,6 +55,7 @@
                     <ul>
                         <li>Create 3 groups</li>
                         <li>Save 10 gifts per person</li>
+                        <li>Can participate in Secret Santas/White Elephants</li>
                     </ul>
                 <a class="island-1-2 signin align-center giga" href="form.html">$2.00/month</a>
            </div>
@@ -63,7 +64,7 @@
                     <img src="images/bows-03.png" class="social">
                     <ul>
                         <li>Create 5 groups</li>
-                        <li>Start secret santas/white elephants</li>
+                        <li>Start Secret Santas/White Elephants</li>
                         <li>Recieve gift suggestions</li>
                         <li>Save 20 gifts per person</li>
                         <li>Notificatons and reminders of dates</li>
@@ -75,7 +76,7 @@
                <h2 class="align-center">Ultimate</h2>
                     <img src="images/bows3-03.png" class="social">
                     <ul>
-                    `   <li>Ulimates groups and gifts saved per person</li>
+                    `   <li>Ulimated groups and gifts saved per person</li>
                         <li>Compare gift prices</li>
                     </ul>
                 <a class="island-1-2 signin align-center giga" href="form.html">$6/month</a>
@@ -87,9 +88,9 @@
     </main>
         
     <footer class="section-blue">
-            <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
-                <p class="copyright push-0">© 2014 Marisa Bivi· <a href="#top">Top</a></p>
-            </div>
+       <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
+           <p class="copyright push-0">© 2014 Marisa Bivi· <a href="#top">Top</a></p>
+        </div>
         <div class="grid">
             <div class="unit social unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">  
             <div class="grid">
@@ -105,7 +106,7 @@
             <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">    
                 <nav>            
                     <ul class="nav-footer milli">
-                        <li><a class="nav-current" href="index.html">How it Works</a></li>
+                        <li><a class="island-1-2" href="index.html">How it Works</a></li>
                         <li><a class="island-1-2" href="index.html">Why Gaver?</a></li>
                         <li><a class="island-1-2" href="plans.html">Plans</a></li>
                     </ul>
