--- a/form.html
+++ b/form.html
@@ -26,7 +26,7 @@
     </header>
     
     <main>
-    <form action="thanks.html" method="post">
+    <form action="thanks.html" method="get">
         <div class="section-mid mid island">
             <h2 class="align-center">Join Gaver</h2>
             <p class="align-center">Please fill in your information below to start your memebership.</p>
