--- a/form.html
+++ b/form.html
@@ -30,6 +30,8 @@
         <div class="section-mid mid island">
             <h2 class="align-center">Join Gaver</h2>
             <p class="align-center">Please fill in your information below to start your memebership.</p>
+        <div  class="grid">
+            <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-2-3">
             <div class="push-1-2">
                 <label for="name">First Name</label>
                 <input id="name">
@@ -54,6 +56,8 @@
                 <label for="age">Year of birth</label>
                 <input type="number" id="age" min="1930" max="1997">
             </div>
+            </div>
+         <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3">
             <fieldset class="push-1-2">
                 <legend>Method of payment</legend>
                 <span class="radio">
@@ -70,11 +74,13 @@
                 </span>
             </fieldset>
             <div class="push">
-                <label for="why">Enter some of your interests here:</label>
+                <label for="why">Enter some of your interests, likes or hobbies here:</label>
                 <textarea id="why"></textarea>
             </div>
+            </div>
+            </div>
             <div>
-            <button type="submit">Send!</button>
+                <button type="submit">Send!</button>
             </div>
         </div>
     </form>
@@ -101,7 +107,7 @@
             <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">    
                 <nav>            
                     <ul class="nav-footer milli">
-                        <li><a class="nav-current" href="index.html">How it Works</a></li>
+                        <li><a class="island-1-2" href="index.html">How it Works</a></li>
                         <li><a class="island-1-2" href="index.html">Why Gaver?</a></li>
                         <li><a class="island-1-2" href="plans.html">Plans</a></li>
                     </ul>
