Aligning icons to center

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
          <h3 class="align-center" id="why">What we offer</h3>
          <div class="grid">
             <div class="unit unit-xs-1 unit-s-1-3 unit-m-1-3">
-                <img src="./images/icons1-01.svg" alt="list for a friend">
+                <img src="./images/icons1-01.svg" class="icon align-center" alt="list for a friend">
                 <h4 class="align-center">Gift lists for them</h4>
                     <p class="gutter-half">Keep track of who and what gifts you've thought of for people. You can even add them in to groups!</p>
             </div>
             <div class="unit unit-xs-1 unit-s-1-3 unit-m-1-3">
-                <img src="./images/icons1-02.svg" alt="list titled you">
+                <img src="./images/icons1-02.svg" class="icon align-center" alt="list titled you">
                     <h4 class="align-center">Gift list for you</h4>
                         <p class="gutter-half">Other can look off this list for gifts to get you. Of course you'll be able to see others lists as well.</p>
             </div>
             <div class="unit unit-xs-1 unit-s-1-3 unit-m-1-3">     
-                <img src="./images/icons1-03.svg" alt="finger with red string tied to it">
+                <img src="./images/icons1-03.svg" class="social align-center" alt="finger with red string tied to it">
                 <h4 class="align-center">Reminders</h4>
                     <p class="gutter-half">Never forget a celebration again with the reminders we'll send. Now how would you like them? Text? Email? Just in site? Snail Mail?(Not Recommeded)</p>
             </div>
