--- a/thanks.html
+++ b/thanks.html
@@ -13,7 +13,7 @@
 
     <header class="grid section-blue" role="banner" id="top">
         <div>
-            <h2 class="title">Gaver</h2>
+            <h3 class="title white">Gaver</h3>
         </div>
         <nav class="nav unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-2-3" role="navigation" id="nav">
             <ul class="nav">
