trying to figure out css hover

--- a/plans.html
+++ b/plans.html
@@ -72,7 +72,7 @@
                     </ul>
                <a class="island-1-2 signin-dark align-center giga" href="form.html">$4/mo</a>
             </div>
-            <div class="section-blue island-half unit gutter-1 unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+            <div class="section-blueboarder island-half unit gutter-1 unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
                <h2 class="align-center">Ultimate</h2>
                     <img src="images/bows3-03.png" class="social align-center" alt="three bows">
                     <ul>
