fixing html validation

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <a class="signin-dark align-center" href="plans.html">Join Us</a>
         </div>
           
-                <h3 class="align-center gutter-half gutter-half">Planing a Secret Santa or White Elepant?</h4>
+                <h3 class="align-center gutter-half gutter-half">Planing a Secret Santa or White Elepant?</h3>
         <div class="grid">
             <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2">   
                     <p class="gutter-half">It'll never be easier than when you plan with Gaver. Actually, we do most of the planning! Create a group and we'll message everyone their person to get a gift for.</p>
@@ -123,10 +123,10 @@
             <div class="unit social unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">  
             <div class="grid">
                 <div class="unit gutter-1-4 unit-xs-1-4 unit-s-1-4 unit-m-1-4 unit-l-1-4" >
-                    <img src="images/fb-01.svg" class="social">
+                    <img src="images/fb-01.svg" alt="Facebook" class="social">
                 </div>
                 <div class="unit social gutter-1-4 unit-xs-1-4 unit-s-1-4 unit-m-1-4 unit-l-1-4" >
-                    <img src="images/twitter.png" class="social">
+                    <img src="images/twitter.png" alt="Twitter" class="social">
                 </div>
             </div>
         </div>
