--- a/plans.html
+++ b/plans.html
@@ -84,7 +84,7 @@
             </div>
            </div>
         
-        <p class="island"><strong>Note:</strong> Gaver will keep your data and information even after you've canceled your membership should you choose to join us again in the future. You will be able to sign in any time as well but you will only be able to view the lists of gifts you'v created for others and yourself. No further changes will be permited.</p>
+        <p class="island"><strong>Note:</strong> Gaver will keep your data and information even after you've canceled your membership should you choose to join us again in the future. You will be able to sign in any time as well but you will only be able to view the lists of gifts you've created for others and yourself. No further changes will be permited.</p>
     </main>
         
     <footer class="section-blue">
@@ -95,10 +95,10 @@
             <div class="unit social unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">  
             <div class="grid">
                 <div class="unit gutter-1-4 unit-xs-1-4 unit-s-1-4 unit-m-1-4 unit-l-1-4" >
-                    <img src="images/fb-01.svg" class="social">
+                    <img src="images/fb-01.svg" alt="Facebook" class="social">
                 </div>
                 <div class="unit social gutter-1-4 unit-xs-1-4 unit-s-1-4 unit-m-1-4 unit-l-1-4" >
-                    <img src="images/twitter.png" class="social">
+                    <img src="images/twitter.png" alt="twitter"class="social">
                 </div>
             </div>
         </div>
