--- a/signin.html
+++ b/signin.html
@@ -63,6 +63,7 @@
             </div>
             <div class="popular unit gutter-1-2 unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3" >
                 <img src="./images/gift.jpeg" alt="cordless drill" onmouseover="this.src='./images/cordless-drill.jpg'" onmouseout="this.src='./images/gift.jpeg'">
+            </div>
         </div>
     </main>
         
@@ -74,10 +75,10 @@
             <div class="unit social unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">  
             <div class="grid">
                 <div class="unit gutter-1-4 unit-xs-1-4 unit-s-1-4 unit-m-1-4 unit-l-1-4" >
-                    <img src="images/fb-01.svg" class="social">
+                    <img src="images/fb-01.svg"  alt="facebook" class="social">
                 </div>
                 <div class="unit social gutter-1-4 unit-xs-1-4 unit-s-1-4 unit-m-1-4 unit-l-1-4" >
-                    <img src="images/twitter.png" class="social">
+                    <img src="images/twitter.png" alt="twitter" class="social">
                 </div>
             </div>
             </div>
