more html validation fixes

--- a/signin.html
+++ b/signin.html
@@ -20,6 +20,7 @@
                 <li><a class="island-half nav-current" href="index.html"><strong>How it Works</strong></a></li>
                 <li><a class="island-half" href="#why"><strong>Why Gaver</strong></a></li>
                 <li><a class="island-half" href="plans.html"><strong>Plans</strong></a></li>
+                <li><a class="island-1-2 signin" href="form.html">Sign Up</a>
             </ul>
          </nav>
     </header>
