--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
 
     <header class="grid section-blue" role="banner" id="top">
         <div>
-            <h2 class="title">Gaver</h2>
+             <a href="index.html"><img src="images/logo-02.png" class="icon"></a>
         </div>
         <nav class="nav unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-2-3" role="navigation" id="nav">
             <ul class="nav">
