--- a/form.html
+++ b/form.html
@@ -96,10 +96,10 @@
             <div class="unit social unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">  
             <div class="grid">
                 <div class="unit gutter-1-4 unit-xs-1-4 unit-s-1-4 unit-m-1-4 unit-l-1-4" >
-                    <img src="images/fb-01.svg" alt="facebook" class="social">
+                   <a href="http://www.facebook.com"><img src="images/fb-01.svg" alt="facebook" class="social"></a>
                 </div>
                 <div class="unit social gutter-1-4 unit-xs-1-4 unit-s-1-4 unit-m-1-4 unit-l-1-4" >
-                    <img src="images/twitter.png" alt="twitter" class="social">
+                    <a href="http://www.twitter.com"><img src="images/twitter.png" alt="twitter" class="social"></a>
                 </div>
             </div>
         </div>
