--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-3">
                 <figure>
                     <figcaption class="gutter-half">Often in our travels and seaches we come across that PERFECT gift but it is too soon so we put it aside with the thought of <em>'I'll just have to remember and come back for it later.'</em></figcaption>
-                    <img src="images/shopping-bags.jpg" alt="Men walking with shopping bags.">
+                    <img src="images/shopping.jpg" alt="Shopping mall">
                 </figure>
             </div>
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-3">
                 <figure>
                     <figcaption class="gutter-half">But come time we've often totally forgotten where that perfect gift was or what it was all together.  We find oursleves cursing  ourselves out for not picking it up right as we found it.</figcaption>
-                    <img src="images/forgot-something.jpg" alt="Man whose forgotten something">
+                    <img src="images/city.jpg" alt="A city">
                 </figure>
             </div>
             <div class="unit unit-xs-1 unit-s-1 unit-m-1-3">
                 <figure>
                     <figcaption class="gutter-half push-2">Or worse... you've shown up empty handed because you just out right forgot.</figcaption>
-                    <img class="pad-t-2" src="images/empty.png" alt="man with empty hands">
+                    <img class="pad-t-2" src="images/embarrassed.jpg" alt="an embarassed woman">
                 </figure>
             </div>
         </div>
