skip links added

--- a/form.html
+++ b/form.html
@@ -10,6 +10,10 @@
     <link href="css/typography.css" rel="stylesheet">
 </head>
 <body>
+    <ul class="skip-links">
+        <li><a href="#main">Skip to the main content</a></li>
+        <li><a href="#nav">Skip to navigation</a></li>
+    </ul>
 
     <header class="grid section-blue" role="banner" id="top">
         <div>
@@ -25,7 +29,7 @@
          </nav>
     </header>
     
-    <main>
+    <main id="main">
     <form action="thanks.html" method="get">
         <div class="section-mid mid island">
             <h2 class="align-center">Join Gaver</h2>
