--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 <body>
 
+    <ul class="skip-links">
+        <li><a href="#main">Skip to the main content</a></li>
+        <li><a href="#nav">Skip to navigation</a></li>
+    </ul>
+
+    
     <header class="grid section-blue" role="banner" id="top">
         <div>
              <a href="index.html"><img src="images/logo-02.png" class="icon"></a>
@@ -25,7 +31,7 @@
          </nav>
     </header>
     
-    <main>
+    <main id="main">
         <div class="section-blue billboard grid">
             <div class="unit unit-xs-2-3 unit-s-1-2 unit-m-1-3">
                 <div class="white">
@@ -130,7 +136,7 @@
                 </div>
             </div>
         </div>
-            <div class="grid">
+        <div class="grid">
             <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">    
                 <nav>            
                     <ul class="nav-footer milli">
