--- a/plans.html
+++ b/plans.html
@@ -10,6 +10,10 @@
     <link href="css/typography.css" rel="stylesheet">
 </head>
 <body>
+    <ul class="skip-links">
+        <li><a href="#main">Skip to the main content</a></li>
+        <li><a href="#nav">Skip to navigation</a></li>
+    </ul>
 
     <header class="grid section-blue" role="banner" id="top">
         <div>
@@ -25,7 +29,7 @@
          </nav>
     </header>
     
-    <main>
+    <main id="main">
        <div class="grid">
            <div class="section-lightblue island-half unit gutter-1 unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
                 <h2 class="align-center">Trial</h2>
